Moved Models folder to .Models project and added a reference in .DataAccess and .Models project. Modify Startup.cs file and review errors.

--- a/ParthsBookStore/ParthsBookStore.csproj
+++ b/ParthsBookStore/ParthsBookStore.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.27" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ParthsBooks.DataAccess\ParthsBooks.DataAccess.csproj" />
+    <ProjectReference Include="..\ParthsBooks.Models\ParthsBooks.Models.csproj" />
+  </ItemGroup>
+
 </Project>
