--- a/ParthsBooks.DataAccess/ParthsBooks.DataAccess.csproj
+++ b/ParthsBooks.DataAccess/ParthsBooks.DataAccess.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ParthsBooks.Models\ParthsBooks.Models.csproj" />
+    <ProjectReference Include="..\ParthsBooks.Utility\ParthsBooks.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
