--- a/ParthsBooks.DataAccess/ParthsBooks.DataAccess.csproj
+++ b/ParthsBooks.DataAccess/ParthsBooks.DataAccess.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20230413194102_AddCoverTypeToDb.cs" />
+    <Compile Remove="Migrations\20230413194102_AddCoverTypeToDb.Designer.cs" />
+    <Compile Remove="Migrations\20230413195337_AddCoverTypeToDb.cs" />
+    <Compile Remove="Migrations\20230413195337_AddCoverTypeToDb.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.27" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.27" />
