Create Upsert.cshtml and and modified with the API from tiny.cloud.  added new folder products into images, and images into wwwroot. Modified the ProductControllers.cs.

--- a/ParthsBookStore/ParthsBookStore.csproj
+++ b/ParthsBookStore/ParthsBookStore.csproj
@@ -24,6 +24,7 @@
     <Folder Include="Areas\Customer\Data\" />
     <Folder Include="Areas\Customer\Models\" />
     <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\images\products\" />
   </ItemGroup>
 
 </Project>
