Added Upsert post method in productController.cs and added product in HomeController.cs, modified Index.cshtml. Then 3 products added

--- a/ParthsBookStore/ParthsBookStore.csproj
+++ b/ParthsBookStore/ParthsBookStore.csproj
@@ -25,6 +25,7 @@
     <Folder Include="Areas\Customer\Models\" />
     <Folder Include="Controllers\" />
     <Folder Include="wwwroot\images\products\" />
+    <Folder Include="wwwroot\images\products\" />
   </ItemGroup>
 
 </Project>
